# kapia

./: LICENSE  README.md  pyproject.toml
src/: __init__.py
src/kapia/: __init__.py  archive.py  cli.py  runners.py
tests/: test_archive.py
