[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "kapia"
version = "0.0.1"
description = "A lightweight glue library for FEM-based robust optimisation workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
  { name = "Bossányi-Orosz Tamás" }
]

keywords = [
  "finite-element-method",
  "fem",
  "optimisation",
  "optimization",
  "robust-design",
  "multiobjective-optimization",
  "workflow",
  "archive"
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = []

[project.optional-dependencies]
optimisation = [
  "pymoo>=0.6"
]

dev = [
  "build",
  "twine",
  "pytest",
  "ruff"
]

[project.scripts]
kapia = "kapia.cli:main"

[project.urls]
Homepage = "https://github.com/tamasorosz/kapia"
Repository = "https://github.com/tamasorosz/kapia"
Issues = "https://github.com/tamasorosz/kapia/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kapia"]